RESOLVED FIXED 247803
imported/w3c/web-platform-tests/inert/inert-node-is-unfocusable.html is failing
https://bugs.webkit.org/show_bug.cgi?id=247803
Summary imported/w3c/web-platform-tests/inert/inert-node-is-unfocusable.html is failing
Antti Koivisto
Reported 2022-11-11 07:23:22 PST
On Mac WebKit2 only for some reason.
Attachments
Patch (4.78 KB, patch)
2022-11-15 06:28 PST, Antti Koivisto
no flags
Patch (7.67 KB, patch)
2022-11-15 09:21 PST, Antti Koivisto
no flags
Patch (7.60 KB, patch)
2022-11-15 09:25 PST, Antti Koivisto
no flags
Patch (9.50 KB, patch)
2022-11-15 22:51 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2022-11-11 07:23:38 PST
Tim Nguyen (:ntim)
Comment 2 2022-11-12 06:24:41 PST
on gtk wk2 as well.
Tim Nguyen (:ntim)
Comment 3 2022-11-12 08:53:47 PST Comment hidden (obsolete)
Tim Nguyen (:ntim)
Comment 4 2022-11-12 09:14:46 PST
(In reply to Tim Nguyen (:ntim) from comment #3) > Looks like the failure is testing focusability on a date-time input, which I > think are disabled on wk1, and different on iOS. actually datetime is just an alias of text. I think the issue here is that the siblings are not invalidated, only first child gets invalidated.
Antti Koivisto
Comment 5 2022-11-15 06:28:10 PST
Radar WebKit Bug Importer
Comment 6 2022-11-15 07:50:37 PST
Antti Koivisto
Comment 7 2022-11-15 09:21:55 PST
Antti Koivisto
Comment 8 2022-11-15 09:25:08 PST
Antti Koivisto
Comment 9 2022-11-15 22:51:37 PST
EWS
Comment 10 2022-11-17 07:17:39 PST
Committed 256782@main (aaa2528fde20): <https://commits.webkit.org/256782@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 463551 [details].
Antoine Quint
Comment 11 2023-02-07 01:06:46 PST
This caused a regression: bug 251597.
Note You need to log in before you can comment on or make changes to this bug.